fix(DecisionTable): make table easy to read in dark mode
related to OPT-3180

--- a/client/src/modules/components/ReportRenderer/visualizations/DecisionTable/DecisionTable.scss
+++ b/client/src/modules/components/ReportRenderer/visualizations/DecisionTable/DecisionTable.scss
@@ -29,6 +29,10 @@
   .dmn-decision-table-container {
     color: inherit;
 
+    .tjs-table tbody tr:nth-child(2n) {
+      background-color: #444;
+    }
+
     .decision-table-properties {
       color: inherit;
       background-color: inherit;
